# hai-lang

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  code.hai  hai-syntax.txt
examples/: lexer_path_arg.cpp  parser.cpp
src/: lexer.h  main.cpp  syntax_parser.h  tokens_def.h  version.h
src/common/: Defer.hpp  Log.cpp  Log.h  StringView.cpp  StringView.h
tests/: code.hai  code1.hai  tmp.s
